# major-project

op-finder/: CMakeLists.txt  main.cpp
op-finder-lib/: CMakeLists.txt
op-finder-lib/include/: ASTHelpers.hpp  OperationFinder.hpp  OperationFinderAstAction.hpp  OperationFinderAstConsumer.hpp  OperationFinderAstVisitor.hpp  OperationLog.hpp  OperationStorage.hpp  OperatorCounter.hpp  WhileLoop.hpp
op-finder-lib/src/: OperationFinder.cpp  OperationFinderAstAction.cpp  OperationFinderAstConsumer.cpp  OperationFinderAstVisitor.cpp  OperationLog.cpp  OperationStorage.cpp  OperatorCounter.cpp  WhileLoop.cpp
op-finder-tests/: CMakeLists.txt  basic_operations.cpp  branches.cpp  function_calls.cpp
op-finder-tests/fixtures/: RunOnCodeFixture.cpp  RunOnCodeFixture.hpp
op-summarizer/: gcovreader.py  opfinderreader.py  opsummarizer.py  tests.py
op-summarizer/data/: gcov.json  opfinder.json
testcases/: Dhrystone.c  Whetstone.c  fir.c  fir_expected.json  for_loop.c  for_loop_expected.json  gauss_blur.c  gauss_blur_expected.json  if_sentences.c  matrix.c  matrix_expected.json
